frontend/tests/spec/snapshots/lexer/block/heading/multi-line-level-1.snap
---
source: frontend/tests/lexer/mod.rs
info: "Test 'multi-line-level-1' from 'markup/block/heading.yml'"
---
# This is a heading
  in two lines.

#
^ - Hash(1) @ (0 -> 1)
  
 ^ - Whitespace @ (1 -> 2)
  This
  ^^^^ - Plain @ (2 -> 6)
       
      ^ - Whitespace @ (6 -> 7)
       is
       ^^ - Plain @ (7 -> 9)
          
         ^ - Whitespace @ (9 -> 10)
          a
          ^ - Plain @ (10 -> 11)
            
           ^ - Whitespace @ (11 -> 12)
            heading
            ^^^^^^^ - Plain @ (12 -> 19)
                   ␊
                   ^ - Newline @ (19 -> 20)
  
^^ - Indentation(2) @ (20 -> 22)
  in
  ^^ - Plain @ (22 -> 24)
     
    ^ - Whitespace @ (24 -> 25)
     two
     ^^^ - Plain @ (25 -> 28)
         
        ^ - Whitespace @ (28 -> 29)
         lines
         ^^^^^ - Plain @ (29 -> 34)
              .
              ^ - Dot(1) @ (34 -> 35)
               ␊
               ^ - Newline @ (35 -> 36)

---
With input:

# This is a heading
  in two lines.
